2007-03-06 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Remove unknown field "description" from the list $this->fieldlist in class.mod_web_dmail.php
	* Various changes to the user interface.
	* Completed manual.
	* Update module context sensitive help.

2007-03-05 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Minor adjustments to tables csh files.
	* Complete csh help in English and French for sys_dmail_category table.
	* Update section of manual: Categorizing newsletter content.
	* Rename and reorganize module locallang files in mod directory.
	* Add module csh file locallang_csh_web_txdirectmailM1.xml
	* Initialize module csh file and test configuration with a few labels.
	* Add item 'dmail' on column 'module' of table 'pages' in ext_tables.php (pending removal from typo3/sysext/cms/ext_tables.php)
	* Add methods find_MIDfromReturnPath and find_XTypo3MID in mod/class.readmail.php (pending removal from t3lib/class.t3lib_readmail.php)
	* Update to manual and contextual help.
	* Add simulated conversion of records, until conversion is explicitly confirmed.
	* Stop reporting each converted record after the 50th converted record in a table.
	* Stop reporting each not-converted record after the 50th not-converted record in a table.

2007-03-04 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add copy of the static templates in the manual.
	* Change English language labels of Direct Mail Group to Recipient list.
	* Adjust a few more TCA labels.
	* Update recipient list section of manual.
	* Complete csh help in English and French for sys_dmail_group table.

2007-03-03 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update to the manual.

2007-03-01 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add dependency on TYPO3 4.0.0 in ext_emconf.php.
	* Update the Configuration section of the manual, including conversion.
	* Change the module form from "mediumDoc" to "template".
