@@ -1,3 +1,10 @@
+2007-03-07 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
+	* Honor return path and defer mode settings in dmailer_sendSimple.
+	* Do not display the statistics option for direct mails that where sent to a list of addresses (they are not available).
+	* In the Direct Mails function, do not display direct mails that were already sent.
+	* In list of pages not yet direct mails, do not display pages that are hidden or with restricted-access (they cannot be fetched).
+	* Update to module context sensitive help and manual.
+
 2007-03-06 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
 	* Remove unknown field "description" from the list $this->fieldlist in class.mod_web_dmail.php
 	* Various changes to the user interface.
